--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">TemRemédioAí</string>
     <string name="action_settings">Settings</string>
+    <string name="action_maps">Maps</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="search">Search</string>
+    <string name="title_activity_ubs_maps">Tem Remédio Aí</string>
 </resources>
