--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="search">Search</string>
     <string name="title_activity_ubs_maps">Tem Remédio Aí</string>
+    <string name="title_activity_maps_activityteste">Map</string>
 </resources>
