--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search">Search</string>
     <string name="title_activity_ubs_maps">Tem Remédio Aí</string>
     <string name="title_activity_maps_activityteste">Map</string>
+    <string name="testeTexto">testeTexto</string>
 </resources>
