Color and strings values adjusted

--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_maps">Maps</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="search">Search</string>
-    <string name="title_activity_ubs_maps">Tem Remédio Aí</string>
+    <string name="title_activity_ubs_maps">Localização</string>
     <string name="title_activity_maps_activityteste">Map</string>
     <string name="testeTexto">testeTexto</string>
 </resources>
