--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">TemRemédioAí</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_maps">Maps</string>
+    <string name="action_settings">Configurações</string>
+    <string name="action_about">Sobre o Aplicativo</string>
     <string name="title_activity_ubs_maps">Localização</string>
     <string name="title_activity_maps_activityteste">Map</string>
     <string name="testeTexto">testeTexto</string>
