--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_activity_ubs_maps">Localização</string>
     <string name="title_activity_maps_activityteste">Map</string>
     <string name="testeTexto">testeTexto</string>
-    <string name="search">Search</string>
+    <string name="search">Pesquisar...</string>
 </resources>
