Modifying text of string dsc_about

--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="search">Pesquisar...</string>
     <string name="dsc_about">O aplicativo Tem Remédio Aí? tem como objetivo facilitar o acesso
                             à informação da disponibilidade de medicamentos em Unidades Básicas
-                            de Saúde, Hospitais e Centros de Distribuição de Alto Custo.
+                            de Saúde, Hospitais e Farmácias de Alto Custo da Secretaria de Saúde do
+                            Distrito Federal.
                             </string>
 </resources>
