Adjust of list UBSs after select de medicin

--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_about">Sobre o Aplicativo</string>
     <string name="title_activity_ubs_maps">Localização</string>
     <string name="title_activity_about">Informações</string>
+    <string name="title_activity_select_UBS">UBSs Encontradas</string>
     <string name="testeTexto">testeTexto</string>
     <string name="search">Pesquisar...</string>
     <string name="dsc_about">O aplicativo Tem Remédio Aí? tem como objetivo facilitar o acesso
