--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_ubs_maps">Localização</string>
     <string name="title_activity_about">Informações</string>
     <string name="title_activity_select_UBS">UBSs Encontradas</string>
+    <string name="title_activity_select_Remedio">Remedios Encontrados</string>
     <string name="testeTexto">testeTexto</string>
     <string name="search">Pesquisar...</string>
     <string name="dsc_about">O aplicativo Tem Remédio Aí? tem como objetivo facilitar o acesso
