--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
                             de Saúde, Hospitais e Farmácias de Alto Custo da Secretaria de Saúde do
                             Distrito Federal.
                             </string>
+    <string name="about">Sobre o Aplicativo</string>
 </resources>
