--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="prompt_age">Idade</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_name">Nome</string>
+    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
+    <string name="error_invalid_email">O email digitado é invalido</string>
+    <string name="error_invalid_password">A senha é muito curta</string>
+    <string name="error_field_required">Ops!!! Esse campo não foi preenchido.</string>
 </resources>
