Including new string values to strings.xml

--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
                             Distrito Federal.
                             </string>
     <string name="about">Sobre o Aplicativo</string>
+    <string name="selectedUBS">UBS Selecionada</string>
+    <string name="ubsQuantity">Quantidade de Locais</string>
 </resources>
