--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="error_invalid_age">Idade inválida.</string>
     <string name="error_invalid_genre">Sexo não escolhido</string>
     <string name="error_character">Caracter inválido digitado.</string>
+    <string name="prompt_username">Username</string>
 </resources>
