--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="error_invalid_genre">Sexo não escolhido</string>
     <string name="error_character">Caracter inválido digitado.</string>
     <string name="prompt_username">Username</string>
+    <string name="sign_in_Facebook">Login Facebook</string>
 </resources>
