--- a/TemRemedioAi/app/src/main/res/values/strings.xml
+++ b/TemRemedioAi/app/src/main/res/values/strings.xml
@@ -35,4 +35,10 @@
     <string name="error_invalid_genre">Sexo não escolhido</string>
     <string name="error_character">Caracter inválido digitado.</string>
     <string name="prompt_username">Username</string>
+    <string name="informed_ubs">Ubs Informada</string>
+    <string name="selected_ubs">UBS Selecionada</string>
+    <string name="informed_medicine">Remédio Informado</string>
+    <string name="selected_medicine">Remédio Selecionado</string>
+    <string name="not_available">Não Disponível</string>
+    <string name="available">Disponível</string>
 </resources>
